--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,6 @@ html {
     scroll-behavior: smooth;
 }
 
-.jumbo-h1 {
-    text-decoration-color: crimson;
-}
 .jumbotron {
     background-image: url("../images/AdobeStock_264558719.jpeg");
     background-size: cover;
@@ -26,6 +23,27 @@ html {
 .down {
     width: 100px;
     height: 100px;
-    margin-top: 13rem;
-    background-color: rgb(220, 20, 60, .3);
+    margin-top: 15rem;
+    margin-left: auto;
+    background-color: rgba(14, 13, 13, 0.9);
+    border-radius: 20%;
+    fill: crimson;
+    animation: bounce 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+    0%,
+    25%,
+    50%,
+    75%,
+    100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-20px);
+      }
+      60% {
+        transform: translateY(-12px);
+      }
 }
