--- a/css/custom.css
+++ b/css/custom.css
@@ -128,6 +128,16 @@
       }
 }
 
+/* @keyframes rotation {
+    from {
+        transform: rotateY(0deg);
+    }
+    to {
+        transform: rotateY(360deg);
+    }
+} */
+
+/************* PORTFOLIO  *****************/
 
 #portfolio {
     margin: 0;
@@ -139,12 +149,168 @@
     text-shadow: 3px 3px 8px mistyrose;
 }
 
+/* ================================= 
+  Photo 3D Transforms & Transitions
+==================================== */
+
+.cube-container {
+	box-shadow: 0 18px 40px 5px rgba(0,0,0,.4);
+    perspective: 800px;
+    height: 650px;
+}
+
+.photo-cube {
+	transition: transform 2s ease-in-out;
+	width: 320px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10rem;
+	transform-style: preserve-3d;
+}
+
+.photo-cube:hover {
+	transform: rotateY(-270deg);
+}
+
+.front,
+.back,
+.left,
+.right {
+	width: 100%;
+	height: 100%;
+	display: block;
+	position: absolute;
+	transform-style: inherit;
+	backface-visibility: hidden;
+}
+
+.front {
+	transform: translate3d(0, 0, 210px);
+}
+
+.back {
+	transform: translateZ(-110px) rotateY(270deg);
+	transform-origin: center left;
+}
+
+.left {
+	transform: rotateY(-270deg) translate3d(110px, 0, 0);
+	transform-origin: top right;
+}
+
+.right {
+	transform: translateZ(-110px) rotateY(180deg);
+}
+
+/* .port-div {
+    border: solid 2px black;
+    height: 100%;
+}
+
+.port-image {
+    width: 100%;
+    height: 100%;
+}
+
+
+.port-container {
+    margin-top: 5rem;
+    padding-left: 20px;
+    padding-right: 20px;
+} */
 
 
 
 
 
 
+
+/* .gallery {
+    margin: 4% auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    perspective: 800px;
+}
+
+.carousel {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    animation: rotation 20s infinite linear;
+}
+
+
+.carousel img {
+    height: 40%;
+}
+
+.carousel img:hover {
+    animation-play-state: paused;
+}
+
+.carousel figure {
+    display: block;
+    position: absolute;
+    width: 50%;
+    height: 78%;
+    left: 10px;
+    top: 10px;
+    background: black;
+    /* overflow: hidden; */
+    /* border: solid 3px white; */
+
+/* .carousel figure:nth-child(1){
+    transform: rotateY(0deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(2){
+    transform: rotateY(40deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(3){
+    transform: rotateY(80deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(4){
+    transform: rotateY(120deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(5){
+    transform: rotateY(160deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(6){
+    transform: rotateY(200deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(7){
+    transform: rotateY(240deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(8){
+    transform: rotateY(280deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(9){
+    transform: rotateY(320deg) translateZ(288px);
+}
+
+.carousel figure:nth-child(10){
+    transform: rotateY(360deg) translateZ(288px);
+} */ 
+
+/* .carousel img {
+    -webkit-filter: grayscale(1);
+    transform: scale(1.2,1.2);
+}
+
+.carousel img:hover {
+    -webkit-filter: grayscale(0);
+    transform: scale(1.2,1.2);
+} */
 
 
 
