Adds animation pause on hover

--- a/css/custom.css
+++ b/css/custom.css
@@ -128,14 +128,14 @@
       }
 }
 
-/* @keyframes rotation {
+@keyframes rotation {
     from {
         transform: rotateY(0deg);
     }
     to {
         transform: rotateY(360deg);
     }
-} */
+}
 
 /************* PORTFOLIO  *****************/
 
@@ -163,14 +163,14 @@
 	transition: transform 2s ease-in-out;
 	width: 320px;
     height: 300px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto auto auto auto;
     margin-top: 10rem;
-	transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    animation: rotation 10s infinite linear;
 }
 
 .photo-cube:hover {
-	transform: rotateY(-270deg);
+	animation-play-state: paused;
 }
 
 .front,
@@ -203,23 +203,9 @@
 	transform: translateZ(-110px) rotateY(180deg);
 }
 
-/* .port-div {
-    border: solid 2px black;
-    height: 100%;
+.rotate-img-div {
+    /* border: solid 5px firebrick; */
 }
-
-.port-image {
-    width: 100%;
-    height: 100%;
-}
-
-
-.port-container {
-    margin-top: 5rem;
-    padding-left: 20px;
-    padding-right: 20px;
-} */
-
 
 
 
