Adds styling for contact section

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@
     display: flex;
     align-content: space-around;
     height: 3.5rem;
-    background-color: rgb(255, 239, 213, .5);
+    background-color: rgb(255, 239, 213);
     color: rgb(155, 82, 56);
 }
 
@@ -67,6 +67,14 @@
     height: 90vh;
     background-position: center center; 
     margin: 0px;
+}
+
+.jumbo-h1 {
+    color: papayawhip;
+}
+
+.jumbo-h3 {
+    color: rgb(155, 82, 56);
 }
 
 /* ================================= 
@@ -330,11 +338,44 @@
     color: firebrick;
 }
 
+/* ================================= 
+            CONTACT
+==================================== */
+
+.contact {
+    background-color: rgb(233, 186, 233);
+}
+
+.linkedin {
+    transition: transform .4s ease-in-out;
+    width: 5%;
+}
+
+.linkedin:hover {
+    width: 5%;
+    transform: scale(1.3);
+}
+
+.github {
+    transition: transform .4s ease-in-out;
+    width: 5%;
+}
+
+.github:hover {
+    width: 5%;
+    transform: scale(1.3);
+}
+
+.contact-h3 {
+    text-shadow: 3px 3px 8px crimson;
+}
+
+
 /* .gallery {
     margin: 4% auto;
     width: 100%;
     height: 100%;
-    position: relative;
+    position: relative;  
     perspective: 800px;
 }
 
