--- a/css/custom.css
+++ b/css/custom.css
@@ -71,10 +71,12 @@
 
 .jumbo-h1 {
     color: papayawhip;
+    font-size: x-large;
 }
 
 .jumbo-h3 {
     color: rgb(155, 82, 56);
+    font-size: x-large;
 }
 
 /* ================================= 
@@ -101,7 +103,7 @@
     margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
-    font-size: large;
+    font-size: small;
     line-height: 30px;
     border-radius: 5px;
     background-image: radial-gradient( brown, papayawhip);
@@ -110,7 +112,14 @@
 .about-h3 {
     margin-top: 2rem;
     letter-spacing: 5px;
+    font-size: xx-large;
     text-shadow: 5px 5px 8px firebrick;
+}
+
+.frontend,
+.backend,
+.future {
+    font-size: larger;
 }
 
 .list-group {
@@ -171,7 +180,10 @@
 .portfolio-h3 {
     text-shadow: 3px 3px 8px mistyrose;
     color: white;
+    font-size: xx-large;
+    border: solid 3px red;
 }
+
 
 /* ================================= 
   Photo 3D Transforms & Transitions
@@ -180,19 +192,30 @@
 .cube-container {
 	box-shadow: 0 18px 40px 5px rgba(0,0,0,.4);
     perspective: 800px;
-    height: 650px;
+    height: 450px; /* new 600px or 650px */
+    border: solid 3px yellow;
 }
+
+.content {
+    width: 100%; /* new */
+    border: solid 3px green;
+    margin-left: auto;  /* new */
+    margin-right: auto;
+}
+
+/* 650px */
 
 .photo-cube {
 	transition: transform 2s ease-in-out;
-	width: 320px;
-    height: 300px;
-    margin: auto auto auto auto;
+	width: 120px; 
+    height: 100px;
+    margin: 0px auto auto auto;
     margin-top: 10rem;
     transform-style: preserve-3d;
     animation: rotation 10s infinite linear;
 }
 
+/* width: 320px; height: 300px */
 .photo-cube:hover {
 	animation-play-state: paused;
 }
@@ -211,8 +234,9 @@
 }
 
 .front {
-    transform: translate3d(0, 0, 210px);
+    transform: translate3d(0, 0, 10px);
 }
+/* 210px */
 
 .back {
 	transform: translateZ(-110px) rotateY(270deg);
@@ -344,32 +368,59 @@
 
 .contact {
     background-color: rgb(233, 186, 233);
+    height: 100vh;
 }
 
 .linkedin {
     transition: transform .4s ease-in-out;
-    width: 5%;
+    width: 15%;
+}
+
+.linkedin,
+.github {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .linkedin:hover {
-    width: 5%;
     transform: scale(1.3);
 }
 
 .github {
     transition: transform .4s ease-in-out;
-    width: 5%;
+    width: 15%;
 }
 
 .github:hover {
-    width: 5%;
     transform: scale(1.3);
 }
 
 .contact-h3 {
     text-shadow: 3px 3px 8px crimson;
+    font-size: xx-large;
 }
 
+.reach-me {
+    font-size: large;
+}
+
+.email-me {
+    font-size: large;
+}
+
+.email {
+    font-size: larger;
+}
+/* ================================= 
+            MEDIA QUARIES
+==================================== */
+
+
+@media (min-width: 320px) {
+    .jumbo-h1 {
+       
+    }
+}
 
 /* .gallery {
     margin: 4% auto;
