--- a/css/custom.css
+++ b/css/custom.css
@@ -71,12 +71,12 @@
 
 .jumbo-h1 {
     color: papayawhip;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .jumbo-h3 {
     color: rgb(155, 82, 56);
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 /* ================================= 
@@ -192,7 +192,7 @@
 .cube-container {
 	box-shadow: 0 18px 40px 5px rgba(0,0,0,.4);
     perspective: 800px;
-    height: 450px; /* new 600px or 650px */
+    height: 500px; /* new 600px or 650px */
     border: solid 3px yellow;
 }
 
@@ -267,11 +267,20 @@
     position: absolute;
     transition: opacity .4s ease-in, background-color .6s ease-in, background-image .6s ease-in;
     outline: none;
-    left: 100px;
-    top: 250px;
+    left: 5px;
+    top: 50px;
     z-index: 1;
 }
 
+/* .view-details {
+    opacity: 0;
+    position: absolute;
+    transition: opacity .4s ease-in, background-color .6s ease-in, background-image .6s ease-in;
+    outline: none;
+    left: 100px;
+    top: 250px;
+    z-index: 1;
+} */
 
 .photo-cube:hover .view-details {
 	opacity: 1;
@@ -321,6 +330,20 @@
 /* ================================= 
             MODAL POPUP
 ==================================== */
+.modal-content {
+    /* Erase this at mid media query */
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pb-solid {
+    font-size: x-large;
+}
+
+.modal-text {
+    font-size: large;
+}
 
 .modal-view {
     padding-bottom: 10px;
@@ -368,7 +391,9 @@
 
 .contact {
     background-color: rgb(233, 186, 233);
-    height: 100vh;
+    height: 95vh;
+    padding-top: 5.5rem;
+    
 }
 
 .linkedin {
@@ -409,6 +434,7 @@
 }
 
 .email {
+    margin-top: 2rem;
     font-size: larger;
 }
 /* ================================= 
