Adds styling for about section on medium screens(768px)

--- a/css/custom.css
+++ b/css/custom.css
@@ -442,97 +442,35 @@
 ==================================== */
 
 
-@media (min-width: 320px) {
+@media (min-width: 768px) {
     .jumbo-h1 {
-       
+        font-size: 3.5rem;
+    }
+    
+    .jumbo-h3 {
+        font-size: 3.5rem;
+    }
+
+    .about-text {
+        /* border: solid 2px black; */
+        letter-spacing: 1.6px;
+        font-size: large;
+      
+    }
+    
+    .about-h3 {
+        letter-spacing: 8px;
+        font-size: 3rem;
+
+    }
+    
+    .frontend,
+    .backend,
+    .future {
+        font-size: x-large;
     }
 }
 
-/* .gallery {
-    margin: 4% auto;
-    width: 100%;
-    height: 100%;
-    position: relative;  
-    perspective: 800px;
-}
-
-.carousel {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transform-style: preserve-3d;
-    animation: rotation 20s infinite linear;
-}
-
-
-.carousel img {
-    height: 40%;
-}
-
-.carousel img:hover {
-    animation-play-state: paused;
-}
-
-.carousel figure {
-    display: block;
-    position: absolute;
-    width: 50%;
-    height: 78%;
-    left: 10px;
-    top: 10px;
-    background: black;
-    /* overflow: hidden; */
-    /* border: solid 3px white; */
-
-/* .carousel figure:nth-child(1){
-    transform: rotateY(0deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(2){
-    transform: rotateY(40deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(3){
-    transform: rotateY(80deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(4){
-    transform: rotateY(120deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(5){
-    transform: rotateY(160deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(6){
-    transform: rotateY(200deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(7){
-    transform: rotateY(240deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(8){
-    transform: rotateY(280deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(9){
-    transform: rotateY(320deg) translateZ(288px);
-}
-
-.carousel figure:nth-child(10){
-    transform: rotateY(360deg) translateZ(288px);
-} */ 
-
-/* .carousel img {
-    -webkit-filter: grayscale(1);
-    transform: scale(1.2,1.2);
-}
-
-.carousel img:hover {
-    -webkit-filter: grayscale(0);
-    transform: scale(1.2,1.2);
-} */
 
 
 
