Removes border lines in portfolio section

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,6 @@
     height: 30px;
     margin-top: 50px;
     margin: auto;
-    /* background-color: rgba(14, 13, 13, 0.9); */
     border-radius: 20%;
     fill: rgb(155, 82, 56);
     
@@ -59,7 +58,6 @@
     background-color: rgba(255, 239, 214, 0.8);
     background-blend-mode: multiply;
     margin: 0;
-    /* background-attachment: fixed; */
 
 }
 
@@ -98,7 +96,6 @@
 }
 
 .about-text {
-    /* border: solid 2px black; */
     width: 70%;
     padding-left: 10px;
     margin-top: 3rem;
@@ -127,10 +124,6 @@
     margin-bottom: 4rem;
     transition: transform .8s ease-in-out;
 }
-
-/* .list-group:hover {
-    transform: translateY(100%);
-} */
 
 .list-group-item {
     background-color: papayawhip;
@@ -182,7 +175,6 @@
     color: white;
     font-size: xx-large;
     letter-spacing: 8px;
-    border: solid 3px red;
 }
 
 
@@ -193,18 +185,14 @@
 .cube-container {
 	box-shadow: 0 18px 40px 5px rgba(0,0,0,.4);
     perspective: 800px;
-    height: 500px; /* new 600px or 650px */
-    border: solid 3px yellow;
+    height: 500px;
 }
 
 .content {
-    width: 100%; /* new */
-    border: solid 3px green;
-    margin-left: auto;  /* new */
+    width: 100%;
+    margin-left: auto; 
     margin-right: auto;
 }
-
-/* 650px */
 
 .photo-cube {
 	transition: transform 2s ease-in-out;
@@ -216,7 +204,6 @@
     animation: rotation 10s infinite linear;
 }
 
-/* width: 320px; height: 300px */
 .photo-cube:hover {
 	animation-play-state: paused;
 }
@@ -237,7 +224,6 @@
 .front {
     transform: translate3d(0, 0, 10px);
 }
-/* 210px */
 
 .back {
 	transform: translateZ(-110px) rotateY(270deg);
@@ -272,16 +258,6 @@
     top: 50px;
     z-index: 1;
 }
-
-/* .view-details {
-    opacity: 0;
-    position: absolute;
-    transition: opacity .4s ease-in, background-color .6s ease-in, background-image .6s ease-in;
-    outline: none;
-    left: 100px;
-    top: 250px;
-    z-index: 1;
-} */
 
 .photo-cube:hover .view-details {
 	opacity: 1;
@@ -454,7 +430,6 @@
     }
 
     .about-text {
-        /* border: solid 2px black; */
         letter-spacing: 1.6px;
         font-size: large;
       
@@ -481,8 +456,7 @@
     }
 
     .cube-container {
-        height: 500px; /* new 600px or 650px */
-        border: solid 3px yellow;
+        height: 500px; 
     }
     
     .photo-cube {
@@ -494,10 +468,8 @@
         transform-style: preserve-3d;
         animation: rotation 10s infinite linear;
     }
-    /* width: 320px; height: 300px */
     
     .modal-content {
-        /* Erase this at mid media query */
         width: 100%;
     }
 
@@ -563,8 +535,7 @@
     }
 
     .cube-container {
-        height: 500px; /* new 600px or 650px */
-        border: solid 3px yellow;
+        height: 600px; 
     }
     
     .photo-cube {
@@ -576,7 +547,6 @@
         transform-style: preserve-3d;
         animation: rotation 10s infinite linear;
     }
-    /* width: 320px; height: 300px */
     
     .front {
         transform: translate3d(0, 0, 210px);
