Removes horizontal scrolling & borders

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,6 @@
     height: 3.5rem;
     background-color: rgb(255, 239, 213);
     color: rgb(155, 82, 56);
-    border: solid 2px yellow;
 }
 
 .down {
@@ -26,7 +25,6 @@
 .second {
     transition: transform .5s ease-out;
     transform: translateY(-100%);
-    border: solid 2px yellow;
 }
 
 .first-stack {
@@ -42,12 +40,10 @@
 
 .navbar-brand {
     color: crimson;
-    border: solid 2px yellow;
 }
 
 .nav-link {
     color: crimson;
-    border: solid 2px yellow;
 }
 
 
@@ -62,7 +58,6 @@
     background-color: rgba(255, 239, 214, 0.8);
     background-blend-mode: multiply;
     margin: 0;
-    border: solid 2px yellow;
 
 }
 
@@ -70,20 +65,17 @@
     height: 90vh;
     background-position: center center; 
     margin: 0px;
-    border: solid 2px yellow;
 }
 
 .jumbo-h1 {
     color: papayawhip;
     font-size: 3rem;
-    border: solid 2px yellow;
 }
 
 .jumbo-h3 {
     color: rgb(155, 82, 56);
     font-size: 3rem;
     margin-top: 3.5rem;
-    border: solid 2px yellow;
 }
 
 /* ================================= 
@@ -92,7 +84,7 @@
 
 .main {
     padding: 0;
-    border: solid 2px yellow;
+    margin-top: -3rem;
 }
 
 /* ================================= 
@@ -102,7 +94,14 @@
 #about {
     margin: 0;
     background-image: linear-gradient(-30deg, brown, papayawhip, firebrick);
-    border: solid 2px yellow;
+}
+
+.meet-oz {
+    padding-top: 6.5rem;
+}
+
+.begin-about-sec {
+
 }
 
 .about-text {
@@ -115,33 +114,32 @@
     line-height: 30px;
     border-radius: 5px;
     background-image: radial-gradient( brown, papayawhip);
-    border: solid 2px yellow;
 }
 
 .about-h3 {
-    margin-top: 2rem;
+    margin-top: 4rem;
     letter-spacing: 8px;
     font-size: xx-large;
     text-shadow: 5px 5px 8px firebrick;
-    border: solid 2px yellow;
+}
+
+.skills {
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .frontend,
 .backend,
 .future {
     font-size: larger;
-    border: solid 2px yellow;
 }
 
 .list-group {
     margin-bottom: 4rem;
-    transition: transform .8s ease-in-out;
-    border: solid 2px yellow;
 }
 
 .list-group-item {
     background-color: papayawhip;
-    border: solid 2px yellow;
 }
 
 /* ================================= 
@@ -183,7 +181,6 @@
     background-image: url("../images/9.jpg");
     background-size: cover;
     background-position: center center;
-    border: solid 2px green;
 }
 
 .portfolio-h3 {
@@ -191,7 +188,6 @@
     color: white;
     font-size: xx-large;
     letter-spacing: 8px;
-    border: solid 2px yellow;
 }
 
 
@@ -203,14 +199,12 @@
 	box-shadow: 0 18px 40px 5px rgba(0,0,0,.4);
     perspective: 800px;
     height: 500px;
-    border: solid 2px red;
 }
 
 .content {
     width: 100%;
     margin-left: auto; 
     margin-right: auto;
-    border: solid 2px yellow;
 }
 
 .photo-cube {
@@ -276,7 +270,6 @@
     left: 5px;
     top: 50px;
     z-index: 1;
-    border: solid 2px yellow;
 }
 
 .photo-cube:hover .view-details {
@@ -389,8 +382,6 @@
     background-color: rgb(233, 186, 233);
     height: 95vh;
     padding-top: 5.5rem;
-    border: solid 2px greenyellow;
-    
 }
 
 .linkedin {
@@ -421,12 +412,10 @@
     text-shadow: 3px 3px 8px crimson;
     font-size: xx-large;
     letter-spacing: 8px;
-    border: solid 2px yellow;
 }
 
 .reach-me {
     font-size: large;
-    border: solid 2px yellow;
 }
 
 .email-me {
@@ -437,6 +426,19 @@
     margin-top: 2rem;
     font-size: larger;
 }
+
+/* ================================= 
+                SLIDE IN
+==================================== */
+
+/* .slide-in {
+    transform: translateX(-100%);
+    opacity: 0;
+} */
+
+
+
+
 /* ================================= 
             MEDIA QUARIES
 ==================================== */
