--- a/css/custom.css
+++ b/css/custom.css
@@ -107,7 +107,7 @@
     margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
-    font-size: small;
+    font-size: large;
     line-height: 30px;
     border-radius: 5px;
     background-image: radial-gradient( brown, papayawhip);
@@ -454,7 +454,7 @@
     }
 
     .profile-image {
-        width: 30%;
+        width: 200px;
         border-radius: 50%;
     }
 
