--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,3 @@
-/* ================================= 
-                HEADER
-==================================== */
-
 .first {
     display: flex;
     align-content: space-around;
@@ -84,6 +80,7 @@
 
 .main {
     padding: 0;
+    margin-top: -3rem;
 }
 
 /* ================================= 
@@ -95,23 +92,33 @@
     background-image: linear-gradient(-30deg, brown, papayawhip, firebrick);
 }
 
+.meet-oz {
+    padding-top: 6.5rem;
+}
+
+
 .about-text {
     width: 70%;
     padding-left: 10px;
     margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
-    font-size: small;
+    font-size: large;
     line-height: 30px;
     border-radius: 5px;
     background-image: radial-gradient( brown, papayawhip);
 }
 
 .about-h3 {
-    margin-top: 2rem;
+    margin-top: 4rem;
     letter-spacing: 8px;
     font-size: xx-large;
     text-shadow: 5px 5px 8px firebrick;
+}
+
+.skills {
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .frontend,
@@ -122,7 +129,6 @@
 
 .list-group {
     margin-bottom: 4rem;
-    transition: transform .8s ease-in-out;
 }
 
 .list-group-item {
@@ -175,6 +181,11 @@
     color: white;
     font-size: xx-large;
     letter-spacing: 8px;
+}
+
+.profile-image {
+    width: 70%;
+    /* border-radius: 50%; */
 }
 
 
@@ -369,7 +380,6 @@
     background-color: rgb(233, 186, 233);
     height: 95vh;
     padding-top: 5.5rem;
-    
 }
 
 .linkedin {
@@ -414,10 +424,10 @@
     margin-top: 2rem;
     font-size: larger;
 }
+
 /* ================================= 
             MEDIA QUARIES
 ==================================== */
-
 
 @media (min-width: 768px) {
     .jumbo-h1 {
@@ -431,13 +441,17 @@
 
     .about-text {
         letter-spacing: 1.6px;
-        font-size: large;
-      
+        font-size: large;    
     }
     
     .about-h3 {
         font-size: 3rem;
 
+    }
+
+    .profile-image {
+        width: 200px;
+        border-radius: 50%;
     }
 
 
@@ -574,26 +588,3 @@
     }
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
