--- a/css/custom.css
+++ b/css/custom.css
@@ -105,6 +105,7 @@
     margin-right: auto;
     font-size: large;
     line-height: 30px;
+    letter-spacing: 1.5px;
     border-radius: 5px;
     background-image: radial-gradient( brown, papayawhip);
 }
@@ -440,7 +441,7 @@
     }
 
     .about-text {
-        letter-spacing: 1.6px;
+        letter-spacing: 3px;
         font-size: large;    
     }
     
@@ -533,7 +534,7 @@
     }
 
     .about-text {
-        letter-spacing: 1.6px;
+        /* letter-spacing: 1.6px; */
         font-size: large;
       
     }
