--- a/css/custom.css
+++ b/css/custom.css
@@ -93,7 +93,8 @@
 
 #about {
     margin: 0;
-    background-image: linear-gradient(-30deg, brown, papayawhip, firebrick);
+    /* background-image: linear-gradient(-30deg, brown, papayawhip, firebrick); */
+    background-color: rgba(255, 239, 213, .6);
 }
 
 .meet-oz {
@@ -111,7 +112,8 @@
     line-height: 30px;
     letter-spacing: 1.5px;
     border-radius: 5px;
-    background-image: radial-gradient( brown, papayawhip);
+    /* background-image: radial-gradient( brown, papayawhip); */
+    background-color: rgba(255, 239, 213, .7);
 }
 
 .about-h3 {
