--- a/css/custom.css
+++ b/css/custom.css
@@ -103,15 +103,16 @@
 
 
 .about-text {
-    width: 70%;
+    width: 100%;
     padding-left: 10px;
     margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
-    font-size: large;
+    font-size: small;
     line-height: 30px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     border-radius: 5px;
+    text-align: left;
     /* background-image: radial-gradient( brown, papayawhip); */
     background-color: rgba(255, 239, 213, .7);
 }
@@ -121,6 +122,11 @@
     letter-spacing: 8px;
     font-size: xx-large;
     text-shadow: 5px 5px 8px firebrick;
+}
+
+.profile-image {
+    width: 100%;
+    /* border-radius: 50%; */
 }
 
 .skills {
@@ -190,10 +196,6 @@
     letter-spacing: 8px;
 }
 
-.profile-image {
-    width: 70%;
-    /* border-radius: 50%; */
-}
 
 
 /* ================================= 
@@ -447,7 +449,9 @@
     }
 
     .about-text {
+        width: 90%;
         letter-spacing: 1.2px;
+        text-align: center;
         font-size: large;    
     }
     
